--- a/frontend/src/components/stream/stream.css
+++ b/frontend/src/components/stream/stream.css
@@ -6,8 +6,10 @@
     display: flex;
     flex-direction: column;
     justify-items: center;
+    align-items: center;
     overflow-y: scroll;
     margin-top: 2em;
+    width: 100%;
   }
 
   /* Hide scrollbar for Chrome, Safari and Opera */ 
@@ -31,7 +33,7 @@
 
 .stream__posts > .post {
   visibility: visible;
-  width: 85%;
+  width: 100%;
 }
 
 .stream__header > h2 {
