--- a/frontend/src/pages/home/home.css
+++ b/frontend/src/pages/home/home.css
@@ -1,11 +1,12 @@
 .homeContainer {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-evenly;
+    align-items: flex-start;
     margin:0;
     padding: 0;
     width: 100%;
-    background: white;
+    /* background: white; */
     /* background: linear-gradient(rgba(255,255,255,.9), rgba(255,255,255,.9)), url("https://images.unsplash.com/photo-1557683316-973673baf926?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTB8fGdyYWRpZW50fGVufDB8fDB8fA%3D%3D&w=1000&q=80"); */
 
 
@@ -34,7 +35,7 @@
 
 .profileContainer {
     top: 2em;
-    left: 4em;
+    left: 6em;
     position: fixed;
 }
 
@@ -50,11 +51,15 @@
 
 .widgetContainer {
     top: 2em;
-    right: 4em;
+    right: 6em;
     position: fixed;
 }
 
 .streamContainer {
     visibility: hidden;
-    width: 50%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* background-color: red; */
 }
